# video-service/docs/swagger.json
@@ -11,7 +11,7 @@
     "paths": {
         "/upload": {
             "post": {
-                "description": "Uploads a video to S3 and saves its metadata",
+                "description": "Uploads a video and optional thumbnail to S3 and saves metadata",
                 "consumes": [
                     "multipart/form-data"
                 ],
@@ -46,6 +46,12 @@
                         "name": "file",
                         "in": "formData",
                         "required": true
+                    },
+                    {
+                        "type": "file",
+                        "description": "Thumbnail (video or image)",
+                        "name": "thumbnail",
+                        "in": "formData"
                     }
                 ],
                 "responses": {
